# program-admin

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  account_6bRsDGmuSfUCND9vZioUbWfB56dkrCqNE8f2DW7eNU5D.json  funding.json  pyproject.toml
.github/actions/python-poetry/: action.yml
.github/workflows/: ci.yaml
program_admin/: __init__.py  __main__.py  cli.py  instructions.py  keys.py  parsing.py  price_store_instructions.py  publisher_program_instructions.py  sync.py  transactions.py  types.py  util.py
program_admin/program_authority_escrow/: program_id.py
program_admin/program_authority_escrow/instructions/: __init__.py  propose.py
program_authority_escrow/: __init__.py  program_id.py
program_authority_escrow/errors/: __init__.py
program_authority_escrow/instructions/: accept.py  propose.py  revert.py
program_sync/: __init__.py  __main__.py  core.py  parsing.py  types.py  util.py
tests/: test_cli.py  test_sync.py
