[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
known_local_folder = ["program_admin"]

[tool.poetry]
authors = ["Thomaz <thomaz@pyth.network>"]
description = "Syncs products and publishers of the Pyth program"
name = "program-admin"
version = "0.1.0"

[tool.poetry.dependencies]
click = "^8.1.0"
construct = "^2.10.0"
loguru = "^0.6.0"
pythclient = "^0.1.0"
python = "^3.10"
solana = "^0.23.0"
ujson = "^5.2.0"

[tool.poetry.dev-dependencies]
black = { version = "^22.3.0" }
isort = { version = "^5.10.0" }
ipython = "^8.2.0"
mypy = "^0.942"
pylint = "^2.13.0"
types-ujson = "^4.2.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

[tool.poetry.scripts]
program-admin = "program_admin.cli:cli"

[tool.pylint.core]
extension-pkg-allow-list = "ujson"

[tool.pylint.messages_control]
disable = [
    "fixme",
    "missing-class-docstring",
    "missing-module-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "line-too-long",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -q"
testpaths = ["tests"]
